--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
+    "expo-image-picker": "~11.0.3",
     "expo-status-bar": "~1.1.0",
     "google-map-react": "^2.1.10",
     "jwt-decode": "^3.1.2",
@@ -29,6 +30,7 @@
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-picker": "^4.3.0",
     "react-native-numeric-input": "^1.9.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
